[package]
name = "line-filter"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Jet1090 line filter"
repository = "https://github.com/emctoo/line-filter"
keywords = ["rs1090", "jet1090"]

# https://doc.rust-lang.org/cargo/reference/cargo-targets.html#configuring-a-target
autobins = false

[[bin]]
name = "line-filter"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.26" }
tokio-stream = "0.1"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

futures = "0.3"
# futures-util = { version = "0.3.30"}

chrono = "*"

# hex = "0.4.3"
redis = { version = "0.28", features = ["tokio-comp"] }

clap = { version = "4.5", features = ["color", "derive", "wrap_help", "env"] }
dotenv = { version = "0.15" }
rand = { version = "0.8" }
itertools = "0.14"

# https://github.com/ISibboI/evalexpr
evalexpr = "12.0.2"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

toml = "0.8"
tempfile = "3.8"  # 用于测试