[package]
name = "line-filter"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Jet1090 line filter"
repository = "https://github.com/emctoo/line-filter"
keywords = ["rs1090", "jet1090"]

# https://doc.rust-lang.org/cargo/reference/cargo-targets.html#configuring-a-target
autobins = false

[[bin]]
name = "line-filter"
path = "src/main.rs"

[[bin]]
name = "fast"
path = "src/bin/fast.rs"

[[bin]]
name = "streaming"
path = "src/bin/streaming.rs"

[[bin]]
name = "plane"
path = "src/bin/plane.rs"

[[bin]]
name = "history"
path = "src/bin/history.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures-util = { version = "0.3" }

anyhow = "1.0"
reqwest = { version = "0.12", features = ["json"]}

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

futures = "0.3"
# futures-util = { version = "0.3.30"}

redis = { version = "0.29", features = ["tokio-comp"] }
clap = { version = "4.5", features = ["color", "derive", "wrap_help", "env"] }

# https://github.com/ISibboI/evalexpr
evalexpr = "12.0.2"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

toml = "0.8"
tempfile = "3.8" # 用于测试
notify = "8"

# https://github.com/jr-1991/evalexpr-jit
# evalexpr_jit = "0.2.0"

# https://github.com/Kixiron/rust-langdev

rs1090 = { version = "0.4.8" }
openssl = { version = "0.10", features = ["vendored"] }

# Add these lines to your dependencies section
rusqlite = { version = "0.34.0", features = ["bundled"] }
zip = "2.5.0"
dirs = "6.0.0"
dotenv = "0.15"